# Beachlore

./: .gitignore  404.html  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  README.md  SECURITY.md  gen_ref_pages.py  index.html  main.py  mkdocs.yml  objects.inv  pyproject.toml  sitemap.xml
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md  custom-issue.md  feature_request.md
.github/workflows/: docs.yml  publish.yml  python-tests.yml
LPDDR4/: BUS_TRIM.py  DRAM_TRIM.py  Events.py  LPDDR4.py  Other_Components.py  SEC.py  SEC_DED.py  SEC_DED_TRIM.py  __init__.py
LPDDR5/: BUS_TRIM.py  DRAM_TRIM.py  LINK_ECC.py  LPDDR5.py  Other_Components.py  SEC.py  SEC_DED.py  SEC_DED_TRIM.py
Modules/: Asil_Block.py  Base.py  Basic_Event.py  Block_Interface.py  Coverage_Block.py  Faults.py  Pipeline_Block.py  Split_Block.py  Sum_Block.py  System_Base.py  Transformation_Block.py  __init__.py
Modules/Core/: Asil_Block.py  Base.py  Basic_Event.py  Coverage_Block.py  Observable_Block.py  Pipeline_Block.py  Split_Block.py  Sum_Block.py  Transformation_Block.py  __init__.py
Modules/Interfaces/: Block_Interface.py  Observable_Interface.py  Observer.py  __init__.py
Modules/Visualization/: SafetyVisualizer.py  __init__.py
Test/: Test.py
reference/SUMMARY/: index.html
reference/ecc_analyzer/: index.html
reference/main/: index.html
search/: search_index.json
src/: main.py
src/ecc_analyzer/: __init__.py  generic_safety_system.py  system_base.py
tests/: test_core_blocks.py  test_system_base.py
tests/core/: test_asil_block.py  test_basic_event.py  (+7 more)
(+73 files in other folders)
