[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "beachlore_safety"
version = "0.1.0"
description = "Safety analysis and visualization tool according to ISO 26262."
readme = "README.md"
authors = [
  { name = "Linus Held", email = "your.email@example.com" },
]
license = { text = "MIT" }
requires-python = ">=3.9"
dependencies = [
    "graphviz>=0.20",
]

[project.optional-dependencies]
dev = [
    "pytest",
    "black",
    "ruff",
]

[tool.setuptools.packages.find]
where = ["src"]

[tool.ruff]
line-length = 200
target-version = "py39"

[tool.ruff.lint]
select = ["E", "F", "I"]

[tool.ruff.format]
quote-style = "double"